# ast-platform

./: .gitignore  Cargo.toml  README.md  package-lock.json  package.json
.github/workflows/: deploy-pages.yml  pages.yml
apps/ui/: index.html  package-lock.json  package.json  vite.config.ts
apps/ui/functions/: parse.ts
apps/ui/src/: App.css  App.tsx  ErrorBoundary.tsx  language.test.ts  language.ts  main.tsx  types.ts  vite-env.d.ts
apps/ui/src/components/: AstTree.tsx
crates/engine/: Cargo.toml
crates/engine/src/: lib.rs  main.rs
electron/: main.cjs
examples/: local_utils.py  python_gift_demo.py
examples/directory_demo/: directory.json
examples/directory_demo/backend/: directory.json  service.py
examples/directory_demo/backend/cart/: directory.json
examples/directory_demo/frontend/: app.ts  directory.json
examples/directory_demo/shared/: directory.json  helper.ts  utils.js
scripts/: language-normalizer.mjs  parse-fallback.mjs  parse-server.mjs
workers/parse-api/: wrangler.toml
workers/parse-api/src/: index.ts  parseFallback.ts
